--- a/index.html
+++ b/index.html
@@ -80,6 +80,9 @@ time.innerHTML=t;
             body {
     padding-top:180px;
 }
+pre{
+color:white;
+}
 #task{
     font-size:30px;
      font-weight:20px;
