--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </div>
         <pre>Developed By©Vikas</pre>
         <br>
-         <div id="task">TASK</div>
+         <div id="task"></div>
         </center>
         <script>
         var time = document.getElementById ("time");
@@ -85,8 +85,7 @@ color:white;
 }
 #task{
     font-size:30px;
-     font-weight:20px;
-    color:white;
+     font-weight:10px;
 }
 .newDiv{
 font-size:20px;
